; ModuleID = '/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/system/clk/src/extr_sys_clk_static.c_SYS_CLK_SecondaryOscillatorDisable.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/system/clk/src/extr_sys_clk_static.c_SYS_CLK_SecondaryOscillatorDisable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OSC_ID_0 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SYS_CLK_SecondaryOscillatorDisable() #0 {
  %1 = load i32, i32* @OSC_ID_0, align 4
  %2 = call i64 @PLIB_OSC_SecondaryIsEnabled(i32 %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %9

4:                                                ; preds = %0
  %5 = call i32 (...) @SYS_DEVCON_SystemUnlock()
  %6 = load i32, i32* @OSC_ID_0, align 4
  %7 = call i32 @PLIB_OSC_SecondaryDisable(i32 %6)
  %8 = call i32 (...) @SYS_DEVCON_SystemLock()
  br label %9

9:                                                ; preds = %4, %0
  ret void
}

declare dso_local i64 @PLIB_OSC_SecondaryIsEnabled(i32) #1

declare dso_local i32 @SYS_DEVCON_SystemUnlock(...) #1

declare dso_local i32 @PLIB_OSC_SecondaryDisable(i32) #1

declare dso_local i32 @SYS_DEVCON_SystemLock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
